data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3911.wast
;; 10. **Test Case 10**:     - **Description**: Construct a module with interleaved `call_indirect` and `br` targeting multiple scopes resulting in the switching of function calls dynamically, depending on loop counters and conditional instructions nested within.     - **Constraint Checked**: Dynamic scope and function switching handling.     - **Incorrect Branch Target Resolution**: Ensures `br` accurately identifies the active scope and dynamically resolved function calls as per conditional executions, without disrupting control flows.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (import "env" "table" (table 1 funcref))
    (func $target1 (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.add)
    (func $target2 (param i32) (result i32)
      local.get 0
      i32.const 2
      i32.add)
    (elem (i32.const 0) $target1 $target2)
    (func $indirect-caller (param i32 i32) (result i32)
      local.get 1
      i32.const 0
      i32.lt_s
      br_if 0
      loop
        local.get 1
        i32.const 0
        call_indirect (type $sig)
        local.get 0
        i32.add
        local.get 0
        i32.const 1
        i32.add
        br_if 1
        local.get 0
        i32.const 2
        call_indirect (type $sig)
        br 0
      end)
  )
  "invalid result arity"
)